feat: authorization structure
