# backend/internal/modules/user/controller/implement.go
@@ -6,6 +6,7 @@ import (
 	"backend/internal/modules/user/entities"
 	"backend/internal/modules/user/service"
 	"errors"
+	"fmt"
 	"net/http"
 	"strings"
 )
@@ -39,7 +40,7 @@ func (c *UserControl) GetByUsername(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	user, err := c.service.GetUserByName(r.Context(), username)
+	user, err := c.service.GetByName(r.Context(), username)
 	if err != nil {
 		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't get user", err), 404)
 		return
@@ -68,7 +69,7 @@ func (c *UserControl) Update(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if _, err := c.service.GetUserByName(r.Context(), username); err != nil {
+	if _, err := c.service.GetByName(r.Context(), username); err != nil {
 		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't get user", err), 404)
 		return
 	}
@@ -84,7 +85,7 @@ func (c *UserControl) Update(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if err := c.service.UpdateUser(r.Context(), userUpdate); err != nil {
+	if err := c.service.Update(r.Context(), userUpdate); err != nil {
 		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't update user", err))
 		return
 	}
@@ -108,7 +109,7 @@ func (c *UserControl) Create(w http.ResponseWriter, r *http.Request) {
 	var user entities.User
 	_ = c.rr.ReadJSON(w, r, &user)
 
-	if err := c.service.CreateUser(r.Context(), user); err != nil {
+	if err := c.service.Create(r.Context(), user); err != nil {
 		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't create user", err))
 		return
 	}
@@ -135,12 +136,12 @@ func (c *UserControl) Delete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if _, err := c.service.GetUserByName(ctx, username); err != nil {
+	if _, err := c.service.GetByName(ctx, username); err != nil {
 		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't get user", err), 404)
 		return
 	}
 
-	if err := c.service.DeleteUser(ctx, username); err != nil {
+	if err := c.service.Delete(ctx, username); err != nil {
 		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't delete user", err))
 		return
 	}
@@ -149,17 +150,60 @@ func (c *UserControl) Delete(w http.ResponseWriter, r *http.Request) {
 	_ = c.rr.WriteJSON(w, 200, resp)
 }
 
+// CreateWithArray godoc
+// @Summary create with array
+// @Description Create list of users with given input array
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param body body entities.Users true "List of user objects"
+// @Success 201 {object} rr.JSONResponse
+// @Failure 400 {object} rr.JSONResponse
+// @Router /user/createWithArray [post]
+func (c *UserControl) CreateWithArray(w http.ResponseWriter, r *http.Request) {
+	var users entities.Users
+	_ = c.rr.ReadJSON(w, r, &users)
+
+	for _, user := range users {
+		if err := c.service.Create(r.Context(), user); err != nil {
+			_ = c.rr.WriteJSONError(w, e.Wrap("couldn't create user "+user.Username, err))
+			return
+		}
+	}
+
+	resp := rr.JSONResponse{Error: false, Message: fmt.Sprintf("%d user created", len(users))}
+	_ = c.rr.WriteJSON(w, 201, resp)
+}
+
+// Login godoc
+// @Summary login
+// @Description Log user into the system
+// @Tags user
+// @Produce json
+// @Param username query string true "The username for login"
+// @Param password query string true "The password for login in clear text"
+// @Success 200 {object} rr.JSONResponse
+// @Failure 401 {object} rr.JSONResponse
+// @Router /user/login [get]
 func (c *UserControl) Login(w http.ResponseWriter, r *http.Request) {
-	//TODO implement me
-	panic("implement me")
+	query := r.URL.Query()
+	username := query.Get("username")
+	password := query.Get("password")
+
+	tokens, cookie, err := c.service.Authorize(r.Context(), username, password)
+	if err != nil {
+		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't authorize user", err), 401)
+		return
+	}
+
+	resp := rr.JSONResponse{Error: false, Message: "user authorized", Data: tokens}
+
+	http.SetCookie(w, cookie)
+	_ = c.rr.WriteJSON(w, 200, resp)
+
 }
 
 func (c *UserControl) Logout(w http.ResponseWriter, r *http.Request) {
-	//TODO implement me
-	panic("implement me")
-}
-
-func (c *UserControl) CreateWithArray(w http.ResponseWriter, r *http.Request) {
 	//TODO implement me
 	panic("implement me")
 }
